hphp/hack/test/typecheck/naming_fail_test10.php
<?hh

function stmt(bool $b): void {
  if ($b) {
    $x = 0;
  }
  else {
  }
  $B += 1;
}
